# ato-library

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
templates/: main_readme.md.jinja  package_readme.md.jinja
tools/: build-all.sh  build_all.py  bump_versions.py  generate_package_list.py
